@@ -12,6 +12,7 @@ import com.bulkpurchase.domain.repository.order.OrderDetailRepository;
 import com.bulkpurchase.domain.repository.order.OrderRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -19,6 +20,7 @@ import org.springframework.transaction.annotation.Transactional;
 import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
@@ -114,10 +116,12 @@ public class OrderService {
         return orderRepository.findById(orderID);
     }
 
-    public List<OrderViewDTO> getOrderViewModelsByUser(User user, Pageable pageable) {
-        return orderRepository.findByUserOrderByOrderIDDesc(user, pageable).stream()
+    public Map<String, Object> getOrderViewModelsByUser(User user, Pageable pageable) {
+        Page<Order> orderPage = orderRepository.findByUserOrderByOrderIDDesc(user, pageable);
+        List<OrderViewDTO> orderViewDTOS = orderPage.stream()
                 .map(this::convertToOrderViewDTO)
-                .collect(Collectors.toList());
+                .toList();
+        return Map.of("list", orderViewDTOS, "totalPages", orderPage.getTotalPages());
     }
 
     public List<OrderViewDTO> getOrderViewModels() {
